--- a/app/src/main/res/layout/fragment_jobs.xml
+++ b/app/src/main/res/layout/fragment_jobs.xml
@@ -19,6 +19,8 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="parent"
+            android:layout_marginTop="@dimen/margin_8dp"
+            android:id="@+id/rv_jobs"/>
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
