--- a/app/src/main/res/layout/fragment_job_details.xml
+++ b/app/src/main/res/layout/fragment_job_details.xml
@@ -12,8 +12,7 @@
 
 <ScrollView
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:layout_marginBottom="@dimen/margin_10dp">
+    android:layout_height="wrap_content">
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
